# sagitta

./: .README.md.swp  .SEMANTIC_SEARCH_IMPROVEMENTS.md.swp  .conversation_panel_plan.md.swp  .gitattributes  .gitignore  .gitlab-ci.yml  @  AUTO_COMMIT_SYNC_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  Cargo.toml  DEBUG_GUI_TOOL_FLOW.md  DEVELOPMENT_SPEED_TEST_PLAN.md  DOUBLE_CONTINUATION_FIX_SUMMARY.md  E2E_TESTING_PLAN.md  FIX_HEAD_BRANCH_ISSUE.md  GIT_EDGE_CASES_TEST_PLAN.md  GIT_ROBUSTNESS_IMPLEMENTATION.md  GUI_INFINITE_LOOP_DIAGNOSIS.md  LICENSE-MIT  MCP_TOOL_CONTEXT_LIMITS.md  OPENAI_COMPATIBLE_FIXES_PLAN.md  OPENAI_COMPATIBLE_SEARCH_AND_PATH_ISSUES_PLAN.md  PHASE5_CLEANUP_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  QDRANT_WIPE_RECOVERY_SUMMARY.md  README.md  REFACTOR_PLAN.md  RELAY_PLAN.md  ROBUSTNESS_IMPROVEMENTS_SUMMARY.md  SEARCH_RANKING_IMPROVEMENTS.md  SEMANTIC_SEARCH_IMPROVEMENTS.md  STREAMING_TOOL_TRACKING_FIX_SUMMARY.md  TOOL_CARD_UI_FIX_PLAN.md  build.rs  code-search-accuracy-improvement-plan.md  coding-test-plan.md  conversation-management-plan.md  conversation_panel_plan.md  (+57 more)
crates/code-parsers/: Cargo.toml
crates/code-parsers/src/: cpp.rs  cpp_tests.rs  element_filter.rs  fallback.rs  fallback_tests.rs  golang.rs  golang_tests.rs  html.rs  html_tests.rs  javascript.rs  javascript_tests.rs  languages.rs  languages_tests.rs  lib.rs  markdown.rs  markdown_tests.rs  python.rs  python_tests.rs  ruby.rs  ruby_tests.rs  rust.rs  rust_tests.rs  typescript.rs  typescript_tests.rs  yaml.rs  yaml_tests.rs
crates/code-parsers/tests/: overlap_detection_test.rs
crates/git-manager/: CHANGELOG.md  Cargo.toml  MIGRATION_GUIDE.md  PHASE3_SUMMARY.md  README.md
crates/git-manager/examples/: basic_operations.rs
crates/git-manager/src/: compat.rs  error.rs  lib.rs
crates/git-manager/tests/: integration.rs
crates/reasoning-engine/: Cargo.toml  README.md
crates/reasoning-engine/src/: backtracking.rs  confidence.rs  config.rs  coordination.rs  decision.rs  error.rs  graph.rs  lib.rs  orchestration.rs  patterns.rs  reflection.rs  state.rs  streaming.rs  todo.rs  traits.rs
crates/reasoning-engine/tests/: integration_tests.rs
crates/relay/: Cargo.toml  example-anthropic-file.rs
crates/relay/anthropic-docs/: count-message-tokens  messages-api-reference  migrating-from-completions  streaming
crates/relay/src/: cli.rs  config.rs  context.rs  main.rs
crates/repo-mapper/: Cargo.toml  README.md
crates/repo-mapper/src/: error.rs  lib.rs  mapper.rs  types.rs
crates/sagitta-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/sagitta-cli/src/: config.rs  error.rs  fs_utils.rs  lib.rs  main.rs  progress.rs
crates/sagitta-cli/tests/: cli_integration.rs  cpp_syntax_test.rs  formatters_test.rs  list_test.rs  orphaned_test.rs  python_syntax_test.rs  stats_test.rs  syntax_test.rs  use_repo_test.rs
crates/sagitta-code/: CHANGELOG.md  Cargo.toml  GIT_HISTORY_COMPLETION_PLAN.md  GIT_HISTORY_PANEL_PLAN.md  README.md  REPOSITORY_PATH_SECURITY.md  refinements.md  test_openrouter_debug.sh  test_tokenizer.json
crates/sagitta-code/docs/: conversation-panel.md  mcp-integration.md  troubleshooting.md
crates/sagitta-code/examples/: stop_button_demo.rs
crates/sagitta-code/src/: lib.rs  main.rs  tools_stub.rs
crates/sagitta-code/templates/: CLAUDE.md
crates/sagitta-code/tests/: agent_parameter_validation_test.rs  app_initialization_tests.rs  auto_sync_repo_add_test.rs  cluster_naming.rs  conversation_fast_model.rs  conversation_features_test.rs  conversation_flow_edge_cases.rs  conversation_flow_test.rs  conversation_status.rs  dependency_modal_test.rs  embedding_handler_test.rs  enhanced_agent_recovery_test.rs  integration_test.rs  integration_tests.rs  keyboard_input_test.rs  manual_title_update_test.rs  mcp_claude_integration_test.rs  mcp_integration_test.rs  mock_providers.rs  mod.rs  new_conversation_test.rs  openrouter_auth_tests.rs  openrouter_regression.rs  phase3_async_clustering_test.rs  phase3_conversation_context_test.rs  refinements_phase0_tests.rs  refinements_phase3_tests.rs  shell_execution_integration.rs  startup_performance_test.rs  stop_button_test.rs  tagging.rs  test_isolation_verification.rs  timeout_verification_test.rs  title_generation.rs  tool_cards_integration_test.rs.disabled  tool_failure_test.rs  tool_parameter_display_test.rs  tool_progress_flow.rs  tool_timeout.rs.disabled  ui_cleanup_test.rs  (+2 more)
crates/sagitta-embed/: Cargo.toml  GPU_OPTIMIZATION_GUIDE.md  PERFORMANCE.md  README.md
crates/sagitta-embed/examples/: basic_usage.rs  benchmark.rs  concurrent_processing.rs  debug_model_info.rs  debug_sequence_length.rs  gpu_optimization.rs  processing.rs
crates/sagitta-embed/src/: config.rs  error.rs  lib.rs
crates/sagitta-embed/tests/: comprehensive_tests.rs  max_sessions_integration_test.rs  max_sessions_test.rs  phase2_optimization_test.rs  processor_integration.rs  progress_reporting_test.rs  smoke_tests.rs
crates/sagitta-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/sagitta-mcp/docs/: multi_tenancy_api_keys.md
crates/sagitta-mcp/src/: code_intelligence.rs  http_transport.rs  lib.rs  main.rs  progress.rs  server.rs  tcp_transport.rs  tenant.rs
crates/sagitta-mcp/tests/: dependency_integration_test.rs  dependency_simple_test.rs  git_history_test.rs  multi_tenancy_integration.rs  repository_list_with_dependencies_test.rs  tools_list_test.rs
crates/sagitta-search/: CHANGELOG.md  Cargo.toml
crates/sagitta-search/src/: cache.rs  config.rs  error.rs  fs_utils.rs  fs_utils_test.rs  indexing.rs  lib.rs  qdrant_client_trait.rs  qdrant_ops.rs  repo_add.rs  search_impl.rs  snippet_extractor.rs  sync.rs  sync_progress.rs  test_utils.rs  vocabulary.rs
crates/sagitta-search/tests/: cli_e2e.rs
crates/terminal-stream/: Cargo.toml  README.md
crates/terminal-stream/examples/: ts-basic-usage.rs
crates/terminal-stream/src/: buffer.rs  config.rs  (+5 more)
crates/vectordb-client/: Cargo.toml  README.md
crates/vectordb-core/: Cargo.toml  README.md
crates/vectordb-mcp/: Cargo.toml  README.md
proto/rust/: Cargo.toml  build.rs
(+801 files in other folders)
