[workspace]
members = [
    "crates/sagitta-search",
    "crates/sagitta-code",
    "crates/sagitta-cli",
    "crates/sagitta-mcp",
    "crates/sagitta-embed",
    "crates/repo-mapper",
    "crates/reasoning-engine",
    "crates/git-manager",
    "crates/terminal-stream",
    "crates/code-parsers"
]
resolver = "2" 