[package]
name = "git-manager"
version = "0.1.0"
edition = "2021"
description = "Centralized git functionality for sagitta with branch management and merkle tree optimization"
license = "MIT OR Apache-2.0"

[dependencies]
# Git operations
git2 = "0.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for merkle trees
sha2 = "0.10"

# File system operations
walkdir = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.0"

# Logging
tracing = "0.1"

# Path handling
pathdiff = "0.2"

# For debugging
env_logger = "0.11"
log = "0.4.27"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"
test-log = "0.2"

[features]
default = []
ssh = ["git2/ssh"] 
