[package]
name = "reasoning-engine"
version = "0.1.0"
edition = "2021"
description = "Graph-based reasoning engine with streaming coordination for AI agents"
license = "MIT"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"

# Logging and debugging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections and data structures
indexmap = "2.0"
dashmap = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP and streaming (for LLM integration)
reqwest = { version = "0.11", features = ["stream"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
