[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Correct the package name to match the dependency's Cargo.toml
vectordb_core = { path = "../vectordb-core" }

# Restore missing dependencies
qdrant-client = "1.13.0" # Or use version from root Cargo.toml if different
tokio-stream = "0.1"
git2 = "0.18" # Or use version from root Cargo.toml if different
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0" # Or use version from root Cargo.toml if different
tempfile = "3" # For tests

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] } # For timestamping, optional serde feature
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } 
toml = "0.8"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3" # For stream handling
bytes = "1"
termcolor = "1.4"
# For potential TUI later
# ratatui = { version = "0.26", features = ["all-widgets"] }
# crossterm = "0.27"
