[package]
name = "sagitta-embed"
version = "0.1.0"
edition = "2021"
description = "High-performance, modular embedding engine for Sagitta"
license = "MIT"
repository = "https://github.com/sagittarius-ai/sagitta-search"
keywords = ["embedding", "onnx", "machine-learning", "search"]
categories = ["science", "text-processing"]

[features]
default = ["onnx"]
onnx = ["ort"]
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
directml = ["ort/directml"]

[dependencies]
# Core dependencies
anyhow = "1.0"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# ONNX and ML dependencies
ort = { version = "2.0.0-rc.9", default-features = false, optional = true, features = ["download-binaries"] }
tokenizers = { version = "0.21.1" }
ndarray = { version = "0.16" }

# Async and concurrency
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Utilities
num_cpus = "1.16"
uuid = { version = "1.8", features = ["v4"] }

# Model downloading
hf-hub = "0.3.2"
dirs = "5.0.1"
ureq = "2.9"

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.10.1"
test-log = "0.2"
env_logger = "0.11"
serde_json = "1.0"

[lib]
name = "sagitta_embed"
path = "src/lib.rs" 