[package]
name = "sagitta-mcp"
version = "0.2.0"
edition = "2021"

[lib]
name = "sagitta_mcp"
path = "src/lib.rs"

[[bin]]
name = "sagitta-mcp"
path = "src/main.rs"

[dependencies]
sagitta-search = { path = "../sagitta-search", features = ["onnx"] }
sagitta-embed = { path = "../sagitta-embed", features = ["onnx"] }
repo-mapper = { path = "../repo-mapper" }
git-manager = { path = "../git-manager" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qdrant-client = "1.9.0"
hyper = { version = "1.6.0", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10.1"
git2 = "0.18"
clap = { version = "4.5.4", features = ["derive"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dashmap = "5.5.3"
futures-util = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
async-stream = "0.3.5"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
async-trait = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
walkdir = "2.4"
similar = "2.4"
dirs = "5.0"
regex = "1.10"
lazy_static = "1.4"
grep = "0.3"
ignore = "0.4"

# Add other necessary dependencies here

# dev-dependencies removed from here 

[dev-dependencies]
async-trait = "0.1"
mockall = "0.12" # Or the latest version 
rand = "0.8" # Add rand dependency
env_logger = "0.10" # Added for logging tests
futures = "0.3" # For join_all in concurrent tests
# Add core dependency with features needed for tests
sagitta-search = { path = "../sagitta-search", features = ["onnx"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["full"] }
# Add other dev dependencies as needed

[features]
default = []
cuda = ["sagitta-search/cuda"]
coreml = ["sagitta-search/coreml"]
rocm = ["sagitta-search/rocm"]
directml = ["sagitta-search/directml"]