[package]
name = "vectordb_core"
version = "0.1.0"
edition = "2021"

# Add features needed by moved modules
[features]
default = ["onetime_rayon", "ort"]
onetime_rayon = ["dep:rayon"]
onnx = ["ort"]
cuda = ["ort/cuda"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
colored = "2.1.0"
env_logger = "0.11"
filetime = "0.2"
indicatif = "0.17.8"
log = "0.4"
# qdrant-client = { version = "1.8.0", features = ["serde", "tonic-tls"] } # Keeping commented for now
qdrant-client = { version = "1.13.0", features = ["serde"] } # Removed tonic-tls feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# tokio = { version = "1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] } # Ensure full features for async runtime
tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.0"
tree-sitter-javascript = "0.21.0"
tree-sitter-typescript = "0.21.0" # Removed incorrect feature flag
tree-sitter-markdown = "^0.7.0"
walkdir = "2.5.0"
uuid = { version = "1.8", features = ["v4"] } # Added uuid
futures = "0.3" # Moved futures to main dependencies
chrono = { version = "0.4.38", features = ["serde"] } # Keep this one
lazy_static = "1.4.0" # Added lazy_static
dirs = "5.0.1" # Added dirs
toml = "0.8.13" # Added toml

# Add HTML grammar (using older version for compatibility)
tree-sitter-html = "0.20.3"

# Add dependencies needed by error.rs
# qdrant-client = { version = "1.13.0", features = ["serde"] } # Removed duplicate
git2 = "0.18.3" # Added git2

# Add dependency for onetime_rayon feature
rayon = { version = "1.10.0", optional = true }

# Add dependency for ort feature
ort = { version = "2.0.0-rc.9", default-features = false, optional = true, features = ["download-binaries"] }

# Dependencies for embedding/provider/onnx.rs
tokenizers = { version = "0.21.1" }
ndarray = { version = "0.16" }

# Dependencies for repo_add / repo_helpers
clap = { version = "4.5.7", features = ["derive"] } # For AddRepoArgs
tracing = "0.1"
# Need embedding_logic dependencies if used internally (like ort, tokenizers)
# Assuming ort is already added for error.rs
# tokenizers = "0.21.1" # REMOVED DUPLICATE Assuming helpers or add might need this indirectly

# Dependency for repo_helpers
# indicatif = "0.17.8" # Removed duplicate

# Dependencies for syntax module
# tree-sitter = "0.22.6" # Removed duplicate
tree-sitter-ruby = "0.21.0"
tree-sitter-go = "0.21.0"
tree-sitter-md = "0.2.3"
# tree-sitter-javascript = "0.21.0" # Removed duplicate
tree-sitter-yaml = "0.6.1"
# tree-sitter-python = "0.21.0" # Removed duplicate

# --- Dependencies for edit module --- 
regex = "1.10.3"
tempfile = "3.5"
# Note: tree-sitter and language crates already added above for syntax module
# --- End dependencies for edit module ---

num_cpus = "1.16"

# futures = "0.3" # Removed duplicate - Moved futures to main dependencies
# chrono = { version = "0.4.38", features = ["serde"] } # Removed this one

# walkdir = "2.5.0" # Removed this one

[dev-dependencies] # Add dev dependencies if needed for tests in core
tempfile = "3.10.1"
serde_json = "1.0.117"
mockall = "0.12.1"

# Required by tree-sitter-markdown
cc = "1.0"
