[package]
name = "vectordb-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "vectordb_mcp"
path = "src/lib.rs"

[[bin]]
name = "vectordb-mcp"
path = "src/main.rs"

[dependencies]
vectordb_core = { path = "../../", features = ["onnx"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qdrant-client = "1.9.0"
hyper = { version = "1.6.0", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempdir = "0.3"
git2 = "0.18"
clap = { version = "4.5.4", features = ["derive"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dashmap = "5.5.3"
futures-util = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
async-stream = "0.3.5"

# Add other necessary dependencies here

# dev-dependencies removed from here 

[dev-dependencies]
async-trait = "0.1"
mockall = "0.12" # Or the latest version 
rand = "0.8" # Add rand dependency
# Add core dependency with features needed for tests
vectordb_core = { path = "../../", features = ["onnx"] }
serde_json = "1.0"
# Add other dev dependencies as needed

[features]
default = []